tests/NormalTests/paczka1/fuzzy1/92222495.err
Error in line 7: S135 A93 64,7
Error in line 10: NyYfrKGAtp A52 60,3
Error in line 18: MwzQ3l A52 -1,2
Error in line 16: NyYfrKGAtp S159 116,9
Error in line 17: MwzQ3l A52 79,3
Error in line 26: NyYfrKGAtp A52 52,2
Error in line 28: NyYfrKGAtp S135 20,1
Error in line 34: S51s S159 65,3
Error in line 38: S51s S135 51,9
